; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/extr_walreceiverfuncs.c_WalRcvRunning.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/extr_walreceiverfuncs.c_WalRcvRunning.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i32 }

@WalRcv = common dso_local global %struct.TYPE_3__* null, align 8
@WALRCV_STARTING = common dso_local global i64 0, align 8
@WALRCV_STARTUP_TIMEOUT = common dso_local global i64 0, align 8
@WALRCV_STOPPED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WalRcvRunning() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @WalRcv, align 8
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %2, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  %9 = call i32 @SpinLockAcquire(i32* %8)
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %3, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  store i64 %15, i64* %4, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 2
  %18 = call i32 @SpinLockRelease(i32* %17)
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* @WALRCV_STARTING, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %48

22:                                               ; preds = %0
  %23 = call i32 @time(i32* null)
  %24 = sext i32 %23 to i64
  store i64 %24, i64* %5, align 8
  %25 = load i64, i64* %5, align 8
  %26 = load i64, i64* %4, align 8
  %27 = sub nsw i64 %25, %26
  %28 = load i64, i64* @WALRCV_STARTUP_TIMEOUT, align 8
  %29 = icmp sgt i64 %27, %28
  br i1 %29, label %30, label %47

30:                                               ; preds = %22
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 2
  %33 = call i32 @SpinLockAcquire(i32* %32)
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* @WALRCV_STARTING, align 8
  %38 = icmp eq i64 %36, %37
  br i1 %38, label %39, label %43

39:                                               ; preds = %30
  %40 = load i64, i64* @WALRCV_STOPPED, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  store i64 %40, i64* %42, align 8
  store i64 %40, i64* %3, align 8
  br label %43

43:                                               ; preds = %39, %30
  %44 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 2
  %46 = call i32 @SpinLockRelease(i32* %45)
  br label %47

47:                                               ; preds = %43, %22
  br label %48

48:                                               ; preds = %47, %0
  %49 = load i64, i64* %3, align 8
  %50 = load i64, i64* @WALRCV_STOPPED, align 8
  %51 = icmp ne i64 %49, %50
  br i1 %51, label %52, label %53

52:                                               ; preds = %48
  store i32 1, i32* %1, align 4
  br label %54

53:                                               ; preds = %48
  store i32 0, i32* %1, align 4
  br label %54

54:                                               ; preds = %53, %52
  %55 = load i32, i32* %1, align 4
  ret i32 %55
}

declare dso_local i32 @SpinLockAcquire(i32*) #1

declare dso_local i32 @SpinLockRelease(i32*) #1

declare dso_local i32 @time(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
